JSAV.css
/* ... */
/* Size and space of checkboxes for sequence selection                 */
.JSAV input[type=checkbox]   /* Mini Checkboxes */
{
  -ms-transform:     scale(0.8); /* IE                */
  -moz-transform:    scale(0.8); /* FF                */
  -webkit-transform: scale(0.8); /* Safari and Chrome */
  -o-transform:      scale(0.8); /* Opera             */
  margin: -3px 5px -3px -3px;
}

/* Spacing of controls from the sequence display                       */
.JSAVControls { margin: 1em 0 0 0; }
.JSAVControls .controlbuttons {
				}
/* Spacing around the buttons in the controls section                  */
.JSAVControls button { margin: 1px 4px 1px 0px;
			display:inline-block;
			padding:1px 5px;
			height: 20px;
			margin-bottom:0;
			font-size:12px;
			font-weight:400;
			line-height:1.42857143;
			text-align:center;
			white-space:nowrap;
			vertical-align:middle;
			-ms-touch-action:manipulation;
			touch-action:manipulation;
			cursor:pointer;
			-webkit-user-select:none;
			-moz-user-select:none;
			-ms-user-select:none;
			user-select:none;
			background-image:none;
			border:1px solid transparent;
			border-radius:3px;			
			border-color:#333333;} 
.JSAVControls button.active		{color:#fcd3a5;}
/* Any styling to apply to the heavy buttons                             */
.heavybutton {	background-color:#333333; color:#fff;}
/* Any styling to apply to the light buttons                             */
.lightbutton {	background-color:#999999; color:#fff;} 
/* Any styling to apply to the combined buttons                          */
.combinedbutton {	background-color:#666666; color:#fff;} 
.JSAVControls .colourselect {	margin: 1px 4px 1px 0px;
				display:inline-block;
				padding:1px 5px;
				margin-bottom:0;
				font-size:12px;
				font-weight:400;
				line-height:1.42857143;
				text-align:center;
				white-space:nowrap;
				vertical-align:middle;
				background-image:none;
				border:1px solid transparent;
				border-radius:3px;		
				border-color:#333333; }

/***********************************************************************/
/*** Things the user is NOT likely to want to change                 ***/
/***********************************************************************/

.JSAVControls .actionbutton { background: #999999; border-radius: 4px; border-color: #666666; }
.JSAVControls input { margin-left: 8pt; }
.JSAV .idCell, .JSAV .idCell a:link, .JSAV .idCell a:visited {text-align: left; color: #274c7b; font-weight: normal; font: 9pt sans-serif; width: 100px; min-width: 100px; max-width: 100px; padding-left: 18px; cursor: pointer;}
.JSAV p, .JSAV label {color: #274c7b;}
.JSAV .highlightrow  {height: 18px;}
.JSAV .br_highlightrow  {height: 18px; border-right: 3px solid #999999;}
.JSAV .tr_highlightrow {width: 12px; padding:0; margin: 0;} /* Transposed version */
.JSAV .typeLabelRow {height: 2px;}
.JSAV .highlighted   {background-color: #bbbbbb; padding: 0; margin: 0; width: 9px;}
.JSAV .unhighlighted {background-color: #777777; padding: 0; margin: 0; width: 9px;}

/* Three section sequence table - ids, checkboxes, sequences */
.JSAV .header {white-space: nowrap; direction: ltr;}
.JSAV .footer {white-space: nowrap; direction: ltr;}
.JSAV .outerseqtable {white-space: nowrap; overflow-y: scroll; overflow-x: hidden; direction: rtl; max-height: 30em;}
.JSAV .seqtable {white-space: nowrap; direction: ltr; max-height: 30em;}

/* Transposed version of above */
.JSAV .tr_seqtable {overflow-y: hidden; overflow-x: scroll; direction: ltr;}
.JSAV .tr_outerseqtable {overflow-y: scroll; overflow-x: hidden; max-height: 40em;}
.JSAV .spacer {height: 20px;}

.JSAV table {border-collapse: collapse;
		-webkit-touch-callout: none;
		-webkit-user-select: none;
		-khtml-user-select: none;
		-moz-user-select: none;
		-ms-user-select: none;
		user-select: none;}
.JSAV tr    {padding: 0;
             margin: 0}
.JSAV td    {padding: 1px;
             margin: 0;
             font: 10pt courier,monospaced;
             text-align: center;}
.JSAV th    {padding: 1px;
             margin: 0;
             text-align: left;
             font: bold 10pt courier,monospaced;}
.JSAV tr.topline { border-bottom: 2px solid black; padding-bottom: 5px;}
.JSAV .toprow td {border-bottom: 1px solid #AAAAAA;
                  margin: 0 0 1px 0;}
.JSAV .bottomrow td {border-top: 1px solid black;
                     border-bottom: 1px solid black;
                     margin: 0 0 1px 0;}
.JSAV .rhcol {border-left: 1px solid #999999; padding: 0px; }
.JSAV .markerrow {height:10px;}		/* Height of sequence sort marker row	*/
.JSAV .labelrow {height: 16px;}		/* Height of label row 		     	*/
.JSAV .tr_labels {width: 50px;} 	/* Width of transposed label column  	*/
.JSAV .seqrow {height: 18px;}		/* Height of sequence row	     	*/
.JSAV .selectCell {padding-left: 5px; padding-top: 0px; width: 20px ;min-width: 20px;}
.JSAV .seqCell {padding: 0; margin: 0; min-width: 9px; width: 9px;}	
.JSAV .tr_selectCell {padding-left: 5px;}	
.JSAV .br_seqCell {padding: 0; margin: 0; border-right: 3px solid #999999;}	
.JSAV .tr_idCell, .JSAV .tr_idCell a:link, .JSAV .tr_idCell a:visited {text-align: left; color: #274c7b; font-weight: normal; font: 9pt sans-serif; width: 20px; min-width: 20px; max-width: 20px; overflow: hidden; text-overflow: ellipsis;}

.JSAV .tr_seqCell {width: 20px; } 			/* Transposed version 	*/
.JSAV .consensusSelectCell {border-right: 1px solid black; 
                            border-top: 2px solid black}
.JSAV .consensusCell {border-top: 2px solid black;}
.JSAV .blastqueryCell {border-bottom: 2px solid black;}
.JSAV .br_consensusCell {border-top: 2px solid black; border-right: 3px solid #999999;}
.JSAV .br_blastqueryCell {border-bottom: 2px solid black; border-right: 3px solid #999999;}
.JSAV .tr_consensusCell {border-left: 2px solid black; } /* Transposed version 	*/

.JSAV .unmarked {background-color: #FFFFFF; padding: 0; margin: 0; width: 9px;}
/* ... */

